<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/unlockFragment">

    <fragment
        android:id="@+id/unlockFragment"
        android:name="com.beluga.e2ee.ui.unlock.UnlockFragment"
        android:label="@string/unlock_title"
        tools:layout="@layout/fragment_unlock">
        <action
            android:id="@+id/action_unlock_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/unlockFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.beluga.e2ee.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_home_to_receive"     app:destination="@id/receiveFragment"/>
        <action android:id="@+id/action_home_to_send"        app:destination="@id/sendMessageFragment"/>
        <action android:id="@+id/action_home_to_contacts_for_session" app:destination="@id/contactsFragment"/>
        <action android:id="@+id/action_home_to_sharekey"   app:destination="@id/shareKeyFragment"/>
        <action android:id="@+id/action_home_to_contacts"   app:destination="@id/contactsFragment"/>
    </fragment>

    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.beluga.e2ee.ui.contacts.ContactsFragment"
        android:label="@string/contacts_title"
        tools:layout="@layout/fragment_contacts">
        <action android:id="@+id/action_contacts_to_addContact" app:destination="@id/addContactFragment"/>
        <action android:id="@+id/action_contacts_to_session" app:destination="@id/sessionInitFragment"/>
    </fragment>

    <fragment
        android:id="@+id/addContactFragment"
        android:name="com.beluga.e2ee.ui.contacts.AddContactFragment"
        android:label="@string/add_contact_title"
        tools:layout="@layout/fragment_add_contact"/>

    <fragment
        android:id="@+id/sessionInitFragment"
        android:name="com.beluga.e2ee.ui.session.SessionInitFragment"
        android:label="@string/session_init_title"
        tools:layout="@layout/fragment_session_init">
        <argument
            android:name="userId"
            app:argType="string"/>
        <action
            android:id="@+id/action_session_to_qr_display"
            app:destination="@id/qrDisplayFragment"/>
    </fragment>

    <fragment
        android:id="@+id/sendMessageFragment"
        android:name="com.beluga.e2ee.ui.send.SendMessageFragment"
        android:label="@string/send_title"
        tools:layout="@layout/fragment_send_message">
        <action
            android:id="@+id/action_send_to_qr_display"
            app:destination="@id/qrDisplayFragment"/>
    </fragment>

    <fragment
        android:id="@+id/qrDisplayFragment"
        android:name="com.beluga.e2ee.ui.send.QrDisplayFragment"
        android:label="@string/qr_display_title"
        tools:layout="@layout/fragment_qr_display">
        <argument
            android:name="qrPayloads"
            app:argType="string[]"/>
    </fragment>

    <fragment
        android:id="@+id/receiveFragment"
        android:name="com.beluga.e2ee.ui.receive.ReceiveFragment"
        android:label="@string/receive_title"
        tools:layout="@layout/fragment_receive">
        <action
            android:id="@+id/action_receive_to_qr_display"
            app:destination="@id/qrDisplayFragment"/>
    </fragment>

    <fragment
        android:id="@+id/shareKeyFragment"
        android:name="com.beluga.e2ee.ui.sharekey.ShareKeyFragment"
        android:label="@string/share_key_title"
        tools:layout="@layout/fragment_share_key"/>

</navigation>
