<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_receive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/home_receive"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/home_send"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/home_session"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_share_key"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/home_contacts"
        app:srcCompat="@android:drawable/ic_menu_manage"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
